[gd_scene load_steps=11 format=3 uid="uid://df3t252u805na"]

[ext_resource type="Script" path="res://Scenes/MicroGames/Collapsing Bridge/Phycis Planks.gd" id="1_0o672"]
[ext_resource type="PackedScene" uid="uid://d2t28yi8602lb" path="res://Assets/Collapsing Bridge/plank.tscn" id="2_joo18"]
[ext_resource type="Script" path="res://addons/shaker/src/Vector3/shaker_component3D.gd" id="3_mgtf8"]
[ext_resource type="Script" path="res://addons/shaker/data/Vector3/BaseShakerType3D.gd" id="4_dnl22"]
[ext_resource type="Script" path="res://addons/shaker/data/Vector3/ShakerTypeRandom3D.gd" id="4_n1sx2"]
[ext_resource type="Script" path="res://addons/shaker/data/Vector3/ShakerPreset3D.gd" id="5_o80lf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_br2h7"]

[sub_resource type="Resource" id="Resource_8py6t"]
script = ExtResource("4_n1sx2")
seed = 0
amplitude = Vector3(1, 1, 1)
offset = Vector3(0, 0, 0)
BlendingMode = 0
fade_in = 0.0
fade_out = 0.0
start_percent = 0.0
end_percent = 1.0
_temp_graph = false
bake_internal = 64

[sub_resource type="Resource" id="Resource_s147v"]
script = ExtResource("4_n1sx2")
seed = 0
amplitude = Vector3(1, 1, 1)
offset = Vector3(0, 0, 0)
BlendingMode = 0
fade_in = 0.0
fade_out = 0.0
start_percent = 0.0
end_percent = 1.0
_temp_graph = false
bake_internal = 64

[sub_resource type="Resource" id="Resource_n3257"]
script = ExtResource("5_o80lf")
PositionShake = Array[ExtResource("4_dnl22")]([SubResource("Resource_8py6t")])
RotationShake = Array[ExtResource("4_dnl22")]([SubResource("Resource_s147v")])
ScaleShake = Array[ExtResource("4_dnl22")]([])
bake_internal = 64
__follow_timeline = false

[node name="PhycisPlanks" type="Node3D"]
transform = Transform3D(2.6, -4.13915e-08, -1.21072e-08, 4.13915e-08, 2.6, 7.71834e-09, 1.21072e-08, -7.71834e-09, 2.6, -1.3558e-07, -2.08597e-07, 9.39835e-08)
script = ExtResource("1_0o672")
randChance = 21

[node name="RigidBody3D" type="RigidBody3D" parent="."]
freeze = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(1.05587, 0, 0, 0, 0.0908096, 0, 0, 0, 0.304391, 0, 0, 0)
shape = SubResource("BoxShape3D_br2h7")

[node name="Plank" parent="RigidBody3D" instance=ExtResource("2_joo18")]

[node name="ShakerComponent3D" type="Node3D" parent="RigidBody3D/Plank"]
transform = Transform3D(2.6, -3.59413e-17, 0, -3.59413e-17, 2.6, 0, 0, 0, 2.6, 0, 0, 0)
script = ExtResource("3_mgtf8")
intensity = 0.05
duration = 1.0
shakerPreset = SubResource("Resource_n3257")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="shake_finished" from="RigidBody3D/Plank/ShakerComponent3D" to="." method="_on_shaker_component_3d_shake_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
